--- a/aboutme/index-2-minimal.html
+++ b/aboutme/index-2-minimal.html
@@ -81,7 +81,7 @@
 								<div class="banner-content banner-content-fullwidth">
 									<h3></h3>
 									<h1 class="header-title-text type-animate">
-										<a href="" class="typewrite" data-period="2000" data-type='[ "Welcome to your Health detection and Wellbeing Management Program", "Proffessional", "Creative Director", "From United States" ]'>
+										<a href="" class="typewrite" data-period="2000" data-type='[ "Welcome to your Health detection and Wellbeing Management Program", "From Healthy-Hearts !" ]'>
 										<span class="wrap"></span>
 										</a>&nbsp;
 									</h1>
@@ -466,7 +466,7 @@
 									<h3>Provide Daily Healthy Tips</h3>
 									<p>The system will provide a Daily healthy tips for you. To access this service you have to subscribe for the service. This service cost you Rs. 30.00 for a month. This service is optional. 
 										If you interested, please read more details by clicking read more option. This service included best practices to prevent from heart diseases and improve healthy tips of your life.</p>
-									<a class="btn btn-shutter-out-horizontal" href="single-service.html">Read More</a>
+									<a class="btn btn-shutter-out-horizontal" href="single-service6.html">Read More</a>
 								</div>
 							</div><!-- end service-box-wrap -->
 						</div><!-- end service-box -->
